--- a/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
+++ b/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
@@ -41,45 +41,76 @@
                                                 <action selector="like:" destination="GeV-Ec-lDj" eventType="touchUpInside" id="Pon-pe-Av3"/>
                                             </connections>
                                         </button>
-                                        <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nya-cF-G1D">
-                                            <rect key="frame" x="0.0" y="226" width="207" height="368"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nya-cF-G1D">
+                                            <rect key="frame" x="0.0" y="50" width="207" height="368"/>
                                             <subviews>
-                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qWh-JE-qhw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="207" height="300"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评论区：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGS-Po-2fk" userLabel="Label">
+                                                    <rect key="frame" x="0.0" y="0.0" width="207" height="30"/>
+                                                    <color key="backgroundColor" systemColor="systemGrayColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="300" id="rjH-x0-4Vy"/>
+                                                        <constraint firstAttribute="height" constant="30" id="niQ-LN-e07"/>
                                                     </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <tableView clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qWh-JE-qhw">
+                                                    <rect key="frame" x="0.0" y="30" width="207" height="270"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="270" id="rjH-x0-4Vy" userLabel="height = 270"/>
+                                                    </constraints>
+                                                    <color key="separatorColor" systemColor="systemGreenColor"/>
+                                                    <color key="sectionIndexColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <prototypes>
-                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" id="K8t-Bm-jPg">
+                                                        <tableViewCell clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="commentCell" id="K8t-Bm-jPg">
                                                             <rect key="frame" x="0.0" y="44.5" width="207" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="K8t-Bm-jPg" id="6nc-qt-rSv">
                                                                 <rect key="frame" x="0.0" y="0.0" width="207" height="43.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableViewCellContentView>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </tableViewCell>
                                                     </prototypes>
                                                 </tableView>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZrQ-fi-1fk">
+                                                <stackView opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bpt-ew-TFG">
                                                     <rect key="frame" x="0.0" y="300" width="207" height="68"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.pencil" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TW4-lM-8sR">
+                                                            <rect key="frame" x="0.0" y="0.0" width="68" height="66.5"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="TW4-lM-8sR" secondAttribute="height" multiplier="1:1" id="aGU-Ke-PEn"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZrQ-fi-1fk">
+                                                            <rect key="frame" x="68" y="0.0" width="139" height="68"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                        </textField>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="labelColor"/>
+                                                </stackView>
                                             </subviews>
-                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="qWh-JE-qhw" firstAttribute="top" secondItem="QGS-Po-2fk" secondAttribute="bottom" id="0dQ-kj-iSm"/>
                                                 <constraint firstAttribute="trailing" secondItem="qWh-JE-qhw" secondAttribute="trailing" id="0hc-W2-5Qc"/>
-                                                <constraint firstAttribute="trailing" secondItem="ZrQ-fi-1fk" secondAttribute="trailing" id="Dqz-Ec-DH0"/>
-                                                <constraint firstItem="ZrQ-fi-1fk" firstAttribute="leading" secondItem="Nya-cF-G1D" secondAttribute="leading" id="Fy9-Vq-kKI"/>
+                                                <constraint firstItem="QGS-Po-2fk" firstAttribute="top" secondItem="Nya-cF-G1D" secondAttribute="top" id="5jn-ac-dhj"/>
+                                                <constraint firstItem="Bpt-ew-TFG" firstAttribute="top" secondItem="qWh-JE-qhw" secondAttribute="bottom" id="6Eb-ni-Tsa"/>
+                                                <constraint firstAttribute="trailing" secondItem="Bpt-ew-TFG" secondAttribute="trailing" id="8Yh-WY-JzH"/>
+                                                <constraint firstItem="QGS-Po-2fk" firstAttribute="leading" secondItem="Nya-cF-G1D" secondAttribute="leading" id="EUE-Xe-cah"/>
                                                 <constraint firstItem="qWh-JE-qhw" firstAttribute="leading" secondItem="Nya-cF-G1D" secondAttribute="leading" id="MnY-mq-meQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="Bpt-ew-TFG" secondAttribute="bottom" id="SuX-4f-ohA"/>
+                                                <constraint firstAttribute="trailing" secondItem="QGS-Po-2fk" secondAttribute="trailing" id="dWo-bM-wk3"/>
                                                 <constraint firstAttribute="width" secondItem="Nya-cF-G1D" secondAttribute="height" multiplier="9:16" id="kff-Vw-ueJ"/>
-                                                <constraint firstAttribute="bottom" secondItem="ZrQ-fi-1fk" secondAttribute="bottom" id="oAk-rW-goy"/>
-                                                <constraint firstItem="qWh-JE-qhw" firstAttribute="top" secondItem="Nya-cF-G1D" secondAttribute="top" id="wbg-I2-7kN"/>
-                                                <constraint firstItem="ZrQ-fi-1fk" firstAttribute="top" secondItem="qWh-JE-qhw" secondAttribute="bottom" id="wq1-JG-1py"/>
+                                                <constraint firstItem="Bpt-ew-TFG" firstAttribute="leading" secondItem="Nya-cF-G1D" secondAttribute="leading" id="o8e-Zj-QgI"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -87,9 +118,9 @@
                                     <gestureRecognizers/>
                                     <constraints>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="width" secondItem="0ZG-yB-LMG" secondAttribute="width" multiplier="0.5" id="8vF-YK-331"/>
+                                        <constraint firstItem="Nya-cF-G1D" firstAttribute="top" secondItem="0ZG-yB-LMG" secondAttribute="top" constant="50" id="GCI-eR-dfG"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="leading" secondItem="0ZG-yB-LMG" secondAttribute="leading" id="Ke7-aD-5Y9"/>
                                         <constraint firstAttribute="trailing" secondItem="PyI-So-P6X" secondAttribute="trailing" constant="10" id="ZoJ-of-tpN"/>
-                                        <constraint firstItem="Nya-cF-G1D" firstAttribute="centerY" secondItem="0ZG-yB-LMG" secondAttribute="centerY" id="a7b-hJ-SKF"/>
                                         <constraint firstItem="PyI-So-P6X" firstAttribute="centerY" secondItem="0ZG-yB-LMG" secondAttribute="centerY" id="kDS-Fl-Rrg"/>
                                     </constraints>
                                 </collectionViewCellContentView>
@@ -98,6 +129,7 @@
                                 <connections>
                                     <outlet property="commentView" destination="qWh-JE-qhw" id="lJp-WU-dNh"/>
                                     <outlet property="likeButton" destination="PyI-So-P6X" id="afq-U1-Usa"/>
+                                    <outlet property="textField" destination="ZrQ-fi-1fk" id="s4D-Ua-qEb"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -112,9 +144,19 @@
         </scene>
     </scenes>
     <resources>
+        <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <image name="suit.heart.fill" catalog="system" width="128" height="109"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
