--- a/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
+++ b/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -44,9 +45,9 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nya-cF-G1D">
                                             <rect key="frame" x="0.0" y="50" width="207" height="368"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评论区：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGS-Po-2fk" userLabel="Label">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评论区：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGS-Po-2fk" userLabel="Label">
                                                     <rect key="frame" x="0.0" y="0.0" width="207" height="30"/>
-                                                    <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                                    <color key="backgroundColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="niQ-LN-e07"/>
                                                     </constraints>
@@ -54,9 +55,9 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <tableView clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qWh-JE-qhw">
+                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qWh-JE-qhw">
                                                     <rect key="frame" x="0.0" y="30" width="207" height="270"/>
-                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="270" id="rjH-x0-4Vy" userLabel="height = 270"/>
                                                     </constraints>
@@ -113,6 +114,19 @@
                                                 <constraint firstItem="Bpt-ew-TFG" firstAttribute="leading" secondItem="Nya-cF-G1D" secondAttribute="leading" id="o8e-Zj-QgI"/>
                                             </constraints>
                                         </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-St-s5c">
+                                            <rect key="frame" x="360" y="766" width="46" height="46"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="WhS-St-s5c" secondAttribute="height" multiplier="1:1" id="Ghl-cV-JeQ"/>
+                                            </constraints>
+                                            <color key="tintColor" systemColor="systemPinkColor"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="gift.fill" catalog="system"/>
+                                            <connections>
+                                                <action selector="gift:" destination="GeV-Ec-lDj" eventType="touchUpInside" id="UgQ-ct-ClF"/>
+                                                <segue destination="Lgy-aC-4J1" kind="show" id="x85-QB-vij"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <gestureRecognizers/>
@@ -120,6 +134,8 @@
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="width" secondItem="0ZG-yB-LMG" secondAttribute="width" multiplier="0.5" id="8vF-YK-331"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="top" secondItem="0ZG-yB-LMG" secondAttribute="top" constant="50" id="GCI-eR-dfG"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="leading" secondItem="0ZG-yB-LMG" secondAttribute="leading" id="Ke7-aD-5Y9"/>
+                                        <constraint firstItem="WhS-St-s5c" firstAttribute="bottom" secondItem="0ZG-yB-LMG" secondAttribute="bottomMargin" id="S5A-7j-xWD"/>
+                                        <constraint firstItem="WhS-St-s5c" firstAttribute="trailing" secondItem="0ZG-yB-LMG" secondAttribute="trailingMargin" id="XsT-9H-xp4"/>
                                         <constraint firstAttribute="trailing" secondItem="PyI-So-P6X" secondAttribute="trailing" constant="10" id="ZoJ-of-tpN"/>
                                         <constraint firstItem="PyI-So-P6X" firstAttribute="centerY" secondItem="0ZG-yB-LMG" secondAttribute="centerY" id="kDS-Fl-Rrg"/>
                                     </constraints>
@@ -142,8 +158,71 @@
             </objects>
             <point key="canvasLocation" x="-42.028985507246382" y="-5.3571428571428568"/>
         </scene>
+        <!--Gift View Controller-->
+        <scene sceneID="0U2-c8-flE">
+            <objects>
+                <viewController modalPresentationStyle="overCurrentContext" id="Lgy-aC-4J1" customClass="GiftViewController" customModule="live_stream_APP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="90b-al-CwE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uR7-i0-pGV">
+                                <rect key="frame" x="0.0" y="655" width="414" height="207"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDX-Cq-X4s">
+                                        <rect key="frame" x="0.0" y="0.0" width="103.5" height="207"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="emoji_17" title=""/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgm-EO-KkD">
+                                        <rect key="frame" x="103.5" y="0.0" width="103.5" height="207"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="emoji_18" title=""/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkg-u6-chz">
+                                        <rect key="frame" x="207" y="0.0" width="103.5" height="207"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="emoji_24" title=""/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sKs-H6-5fm">
+                                        <rect key="frame" x="310.5" y="0.0" width="103.5" height="207"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="return" catalog="system" title=""/>
+                                        <connections>
+                                            <action selector="dismissVC:" destination="Lgy-aC-4J1" eventType="touchUpInside" id="Gbh-J0-p2i"/>
+                                            <segue destination="c0a-dO-XlT" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="pgO-8O-X6x"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="0.50361394557823125" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="uR7-i0-pGV" secondAttribute="height" multiplier="20:10" id="Tsq-a0-Wqg"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="T55-Vp-v7s"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="uR7-i0-pGV" secondAttribute="bottom" constant="34" id="eQc-a8-8MV"/>
+                            <constraint firstAttribute="trailing" secondItem="uR7-i0-pGV" secondAttribute="trailing" id="gfa-aY-hic"/>
+                            <constraint firstItem="uR7-i0-pGV" firstAttribute="leading" secondItem="90b-al-CwE" secondAttribute="leading" id="vh6-uc-ljs"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ZEa-zP-O0v"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ae-0N-CCX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="c0a-dO-XlT" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="850.72463768115949" y="-5.3571428571428568"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="emoji_17" width="34" height="32"/>
+        <image name="emoji_18" width="34" height="32"/>
+        <image name="emoji_24" width="32" height="32"/>
+        <image name="gift.fill" catalog="system" width="128" height="124"/>
+        <image name="return" catalog="system" width="128" height="101"/>
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <image name="suit.heart.fill" catalog="system" width="128" height="109"/>
         <systemColor name="labelColor">
@@ -152,11 +231,11 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
